[package]
name = "tinybase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.1", features = ["v4", "serde"] }
sled = "0.34.7"
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
