[package]
name = "tinybase-derive"
version = "0.1.2"
edition = "2021"
description = " A tiny embedded database built in Rust."
authors = ["JSH32 <rudnik7000@gmail.com>"]
repository = "https://github.com/JSH32/tinybase.git"
license = "MIT"
keywords = ["embedded", "database", "embedded-database", "storage", "db"]
readme = "../README.md"

[lib]
name = "tinybase_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = "1"
